further arduino MIDI testing

--- a/to-pi-boot/wpa_supplicant.conf
+++ b/to-pi-boot/wpa_supplicant.conf
@@ -1,9 +1,16 @@
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
-country=GB
+ap_scan=1
 update_config=1
+country=GB
 
 network={
  ssid="TP-Link_4D5E"
  psk="40891484"
  key_mgmt=WPA-PSK
+}
+
+network={
+	ssid="SKYFDA79"
+	psk="FTYXYTMSNF"
+	key_mgmt=WPA-PSK
 }
